Fixed error, where some files could not be uploaded because of their names (e.g. names with spaces). Also Upload now works for API < 11.